--- a/src/components/MainPage/BeautySection/BeautySection.module.scss
+++ b/src/components/MainPage/BeautySection/BeautySection.module.scss
@@ -1,4 +1,4 @@
-@import "../../variables";
+@import "../../../variables";
 
 
 
@@ -76,7 +76,6 @@
 
     margin:0 auto;
 
-    
   }
 
 
@@ -95,23 +94,85 @@
 }
 
 .main_block {
-
+ 
+  box-sizing: border-box;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+
+  flex-direction: row;
+  justify-content: space-between;
   overflow: hidden;
   border: 1px solid rgb(180, 180, 180);
   height: auto;
   width: 440px;
-  padding-top: 50px;
-
 
   border-radius: 10px;
   margin-bottom: 20px;
   background-color: #fff;
   transition: all ease 0.2s;
 
+  .arrow_left {
+
+    transition: all ease 0.2s;
+    display: flex;
+    height: 100%;
+    cursor: pointer;
+    z-index: 10;
+    position: absolute;
+    left: 0;
+    width: 50px;
+
+    &:hover {
+      transform: scale(1.25);
+    }
+  }
+
+  .arrow_right {
+
+    transition: all ease 0.2s;
+    height: 100%;
+    display: flex;
+    cursor: pointer;
+    position: absolute;
+    z-index: 10;
+    right:0;
+    width: 50px;
+
+    &:hover {
+      transform: scale(1.25);
+    }
+
+  }
+
+  .slider_list {
+    margin: 0;
+    padding:0 ;
+
+    list-style: none;
+    display: flex;
+    position: absolute;
+    top:0px;
+    left: 0px;
+    height: 100%;
+    width: 2200px;
+    transition: all ease 0.3s;
+
+    .list_item {
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width:440px;
+
+
+      &>p {
+        color:$green;
+        font-size: 30px;
+        font-weight: 600;
+        text-align: center;
+      }
+    }
+  }
 
   .mark_img {
 
@@ -119,14 +180,10 @@
     width: 100px;
     top: 10px;
     right: 10px;
+    z-index: 5;
   }
 
-  &>p {
-    color:$green;
-    font-size: 30px;
-    font-weight: 600;
-    text-align: center;
-  }
+  
 
   &:hover {
 
