--- a/src/components/MainPage/MainPage.module.scss
+++ b/src/components/MainPage/MainPage.module.scss
@@ -13,6 +13,7 @@ a {
   flex-wrap: wrap;
 
 
+
   .company_block {
     margin-top: 20px;
     display: flex;
@@ -78,13 +79,6 @@ a {
     }
   }
 
-  .cards_block {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 30px;
-  }
 
   .accessories_block {
 
@@ -112,6 +106,7 @@ a {
     flex-direction: column;
     align-items: center;
     background-color: #fff;
+    overflow: hidden;
 
     border: 2px solid #53b36a;
     border-radius: 40px;
