--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -12,7 +12,6 @@
   
   .block {
 
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -94,9 +93,9 @@
 
     .block {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: space-between;
-      align-items: flex-start;
+      align-items: center;
       max-width: 1200px;
       width: 100%;
       flex-wrap: wrap;
@@ -108,13 +107,13 @@
         cursor: pointer;
       }
 
-      .right_side {
+      // .right_side {
 
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        max-width: 700px;
-        width: 100%;
+      //   display: flex;
+      //   flex-direction: column;
+      //   align-items: center;
+      //   max-width: 700px;
+      //   width: 100%;
 
         .title {
 
@@ -125,7 +124,9 @@
         
         .desc {
           color: #000;
-          font-size:22px;
+          font-size:20px;
+          margin-top: 0;
+          padding-top: 0;
         }
 
         .btn {
@@ -148,7 +149,7 @@
         background-color:$greenhover;
       }
         }
-      }
+      
 
     }
   }
@@ -174,6 +175,7 @@
 
     .desc {
       text-indent:40px;
+      font-size: 20px;
     }
 
     // .arrow_block {
