--- a/src/components/CardItem/CardItem.module.scss
+++ b/src/components/CardItem/CardItem.module.scss
@@ -14,6 +14,7 @@
   &__container {
     height: 100%;
     cursor: pointer;
+    position: relative;
     // border: 2px solid green;
     display: flex;
     flex-direction: column;
@@ -69,6 +70,8 @@
     font-size: 18px;
     font-weight: 600;
     width: 100%;
+    position: absolute;
+    bottom:10px;
 
   }
 
