--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -1,5 +1,17 @@
 @import "../../variables.scss";
 
+.title {
+  width:100%;
+  height: 54px;
+  font-size: 32px;
+  text-align: center;
+  // background-color: #fff;
+  background-image: url('../../assets/img/footer-bg.png') ;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+
+
 .contacts { 
 
   display: flex;
@@ -17,16 +29,7 @@
     width:100%;
 
 
-    .title {
-      width:100%;
-      height: 54px;
-      font-size: 32px;
-      text-align: center;
-      // background-color: #fff;
-      background-image: url('../../assets/img/footer-bg.png') ;
-      background-repeat: no-repeat;
-      background-position: center bottom;
-    }
+
     .logo {
 
       height: 100px;
@@ -123,6 +126,7 @@
 
     .adress_item {
 
+      margin-top: 40px;
       margin-bottom: 20px;
 
       .item_title {
@@ -156,6 +160,19 @@
         }
         
       }
+
+      .scheme_link {
+        cursor: pointer;
+        color:$green;
+        margin-left: 10px;
+        border-bottom: 1px dotted $green;
+        
+        &:hover {
+
+          color:$greenhover;
+          border-bottom: 1px dotted $greenhover;
+        }
+      }
       
       .icon {
         transform:translateY(30%);
@@ -164,6 +181,11 @@
         border-radius: 50%;
         margin-right: 10px;
 
+        &_mail {
+          border:none;
+          padding-right: 7px;
+          transform:translateY(30%)
+        }
       }
 
 
@@ -173,4 +195,80 @@
 
 
   
+}
+
+.modal {
+  position: fixed; 
+  background-color: rgba(117, 117, 117, 0.75);
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+  z-index: 100;
+
+  .title {
+
+    margin-bottom: -8px;
+    z-index: 110;
+  }
+
+
+  &_dialog {
+    display: flex;
+    flex-direction: column;
+
+    margin: 50px auto;
+    width: 600px;
+    background-color: #fff;
+  }
+
+  .header { 
+    position: relative;
+
+    .close {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      right: 10px;
+      top:10px;
+      cursor: pointer;
+    }
+  }
+
+  .btn {
+
+    position: absolute;
+    left: 10px;
+    top:10px;
+    cursor: pointer;
+    font-family: LytigaPro;
+    box-sizing: border-box;
+    color: #fff;
+    border:none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+
+    text-transform: uppercase;
+    background-color: $green;
+    outline: none;
+    transition: all ease 0.2s;
+    
+    &:hover {
+      background-color:$greenhover;
+    }
+
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    .scheme {
+
+      height: 760px;
+      width: 600px;
+    }
+  }
 }
