--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -25,15 +25,19 @@
       flex-wrap: wrap;
       display: flex;
       justify-content: flex-start;
-      width:400px;
+      width:450px;
 
+      .link {
+        color:#fff;
+        cursor: pointer;
+      }
        .item {
-
+        cursor: pointer;
          align-items: center;
          display: flex;
          margin-bottom: 10px;
          margin-top: 10px;
-        
+        margin-right: 20px;
         &:nth-child(2) {
           width:200px;
         }
@@ -60,10 +64,10 @@
       max-width: 1200px;
   
       .item {
-  
+
         color: #fff;
         margin-right: 10px;
-        
+        cursor: pointer;
         .social {
           
           text-decoration: none;
