--- a/src/components/MainPage/MainPage.module.scss
+++ b/src/components/MainPage/MainPage.module.scss
@@ -6,6 +6,7 @@ a {
 }
 .content {
 
+  margin-top: 20px;
   width: 1200px;
   display: flex;
   flex-direction: row;
@@ -168,9 +169,9 @@ a {
 
   .block {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     max-width: 1200px;
     width: 100%;
     flex-wrap: wrap;
@@ -186,7 +187,7 @@ a {
 
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
       max-width: 700px;
       width: 100%;
 
