--- a/src/components/AccessoryItem/AccessoryItem.module.scss
+++ b/src/components/AccessoryItem/AccessoryItem.module.scss
@@ -8,7 +8,7 @@
 
 .card {
   max-width: 230px;
-
+  height: 100%;
 
   &__container {
 
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
     box-sizing: border-box;
     position: relative;
     padding: 0 10px;
