--- a/src/components/FancoilsPage/FancoilsPage.module.scss
+++ b/src/components/FancoilsPage/FancoilsPage.module.scss
@@ -2,7 +2,7 @@
   // margin-top: 50px;
   width: 1200px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
   height: 89vh;
