--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,6 +4,14 @@
   outline: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 .app {
 
   display: flex;
