--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -25,11 +25,20 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    align-items:center;
+    align-items:flex-start;
     flex-wrap: wrap;
     width: 800px;
     margin-bottom: 50px;
 
+    input[type=radio]{
+      display: none;
+    }
+
+    input[type=radio]:checked + label {
+      background-color:$green;
+      color:#fff;
+      border-color: $green;
+    }
     .row {
       
       
@@ -48,37 +57,44 @@
       }
 
       &  input {
-
+        box-sizing: border-box;
         height: 44px;
         width: 100%;
         margin-bottom: 10px;
       }
 
-      & textarea {
+ 
+
+      &:nth-child(odd){
+
+        width:49%;
+        margin-right: 2%;
+      }
+
+      &:nth-child(even){
+        width:49%;
+      }
+
+      &:nth-child(7) {
+
+        width: 100%;
+        margin-right: 0;
+      }
+      &:nth-child(8) {
+
+        width: 82%;
+        margin-right: 0;
+      }
+
+       .textarea {
+        box-sizing: border-box;
         width: 100%;
         resize: none;
         padding-top: 15px;
 
       }
 
-      &:nth-child(1){
 
-        width:45%;
-        margin-right: 40px;
-      }
-
-      &:nth-child(2){
-        width:50%;
-      }
-
-      &:nth-child(3){
-        width:45%;
-        margin-right: 40px;
-      }
-      
-      &:nth-child(4){
-        width:50%;
-      }
 
       .text {
 
@@ -98,6 +114,31 @@
       }
 
     }
+
+  .radio {
+
+    box-sizing: border-box;
+    border: 2px solid $grey;
+    background-color:white;
+    border-radius: 5px;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    height: 44px;
+    margin-bottom: 10px;
+    transition: all ease .2s;
+
+      &:hover {
+        background-color:$greyhover;
+      }
+      
+ 
+    
+
+    input {
+      width:10px;
+    height: 10px;}
+  }
     
     .btn {
 
@@ -105,7 +146,7 @@
       font-family: LytigaPro;
       position: absolute;
       right: 0px;
-      bottom: -20px;
+      bottom: 0px;
       color: #fff;
       border:none;
       border-radius: 10px;
@@ -115,7 +156,7 @@
       text-transform: uppercase;
       background-color: $green;
       outline: none;
-      transition: all ease 0.2s;
+      transition: all ease 0.3s;
       
       &:hover {
         background-color:$greenhover;
@@ -124,3 +165,27 @@
     }
   }
 }
+
+
+#delivery:checked + .radio {
+margin-bottom: 60px;
+
+}
+
+#delivery:checked + .radio +.show_input {
+  transition: all ease 0.3s;
+  opacity: 1;
+}
+
+.show_input {
+  z-index: 1;
+  position: absolute;
+  opacity: 0;
+  top: 54px;
+  z-index: 0;
+}
+
+.row:nth-child(3),.row:nth-child(4) {
+  z-index: 2;
+}
+
