--- a/src/components/Specification/Specification.module.scss
+++ b/src/components/Specification/Specification.module.scss
@@ -156,6 +156,7 @@
         text-align: center;
         flex-basis: 100px;
         display: flex;
+        justify-content: center;
       }
 
       .btn {
