--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   font-weight: 500;
 }
 
-body {
+body,input {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
