--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -51,17 +51,19 @@
     justify-content: space-between;
     max-width: 1200px;
     flex-wrap: wrap;
-
+  
     .item {
+      overflow: hidden;
+      position: relative;
       display: flex;
-      width: 290px;
+      width: 260px;
       flex-direction: column;
       align-items: center;
       background-color: #fff;
-
-
+      overflow: hidden;
+  
       border: 2px solid #53b36a;
-      border-radius: 50px;
+      border-radius: 40px;
       margin-bottom: 40px;
       padding: 10px;
             
@@ -69,15 +71,42 @@
         width: 110px;
         margin-bottom: 20px;
       }
-
+  
       .text {
-
+  
         font-size: 20px;
         font-weight: bold;
         color: #53b36a;;
         text-align: center;
         margin-top: 0px;
         margin-bottom: 0px;
+      }
+  
+      .hover_block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+        opacity: 0;
+        padding: 10px 15px;
+        position: absolute;
+        font-size: 18px;
+        color: $green;
+        font-weight: 500;
+        top:0;
+        bottom: 0;
+        background-color: rgb(245, 245, 245);
+        transition: ease all 0.4s;
+        text-align: start;
+        text-indent: 15px;
+         p {
+           margin-top: 0;
+           vertical-align: center;
+         }
+        &:hover {
+          opacity: 1;
+        }
       }
     }
   }
