--- a/src/components/AccessoriesPage/AccessoriesPage.module.scss
+++ b/src/components/AccessoriesPage/AccessoriesPage.module.scss
@@ -3,10 +3,10 @@
 
   width: 1200px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
-  height: 100%;
+  height: 89vh;
   
   .title {
 
@@ -24,7 +24,7 @@
 
     width: 100%;
     display: flex;
-    flex-direction: row;
+    // flex-direction: row;
     justify-content: space-between;
     margin-bottom: 30px;
     flex-wrap: wrap;
