--- a/src/components/CardItem/CardItem.module.scss
+++ b/src/components/CardItem/CardItem.module.scss
@@ -70,9 +70,9 @@
     font-size: 18px;
     font-weight: 600;
     width: 100%;
-    position: absolute;
+    // position: absolute;
     bottom:10px;
-
+    color: $green;
   }
 
   &__feature {
@@ -111,7 +111,7 @@
 
   .desc_container {
     max-width: 260px;
-
+    text-align: center;
   }
 
 }
