--- a/src/components/FancoilsPage/FancoilModel/FancoilModel.module.scss
+++ b/src/components/FancoilsPage/FancoilModel/FancoilModel.module.scss
@@ -98,6 +98,7 @@
           color: #000;
         }
 
+
         &_item {
           margin-left: 20px;
         }
@@ -208,6 +209,7 @@
         padding-left: 20px;
         font-size: 20px;
       }
+      
     }
 
     .left_side {
@@ -231,6 +233,11 @@
       color: #000;
     }
 
+    .text_subtitle {
+      font-weight: 600;
+      font-size: 18px;
+      color: #000;
+    }
     .about_series {
       padding: 10px 20px;
 
