--- a/src/components/MainPage/BeautySection/BeautySection.module.scss
+++ b/src/components/MainPage/BeautySection/BeautySection.module.scss
@@ -26,6 +26,12 @@
       overflow: hidden;
       border: 1px solid rgb(180, 180, 180);
       border-radius: 10px;
+      box-sizing: border-box;
+      height: 160px;
+      width:330px;
+
+      
+
 
       .mini_block {
         border:none;
@@ -33,11 +39,13 @@
         margin-bottom: 0;
       }
 
+
+
     }
     
 
 .mini_block {
-  
+  position: relative;
 
   display: flex;
   flex-direction: column;
@@ -51,27 +59,28 @@
   border: 1px solid rgb(180, 180, 180);
   border-radius: 10px;
 
-  height: 220px;
-  width: 220px;
+  height: 160px;
+  width: 160px;
 
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-color: #fff;
 
   
   &> p {
     margin: 0;
-
+    font-size: 18px;
     padding: 0;
   }
 
   &>p>span {
     font-weight: 600;
-    font-size: 36px;
+    font-size: 24px;
     color: $green;
 
   }
 
   &>img {
+
     width: 80px;
 
     margin:0 auto;
@@ -81,16 +90,51 @@
 
 }
 
+
 .mini_green {
-  background-color: $green;
-  color: #fff;
+  border: 5px solid $green;
+  &:hover {
+    background: $green;
+  }
+
+
+ p {
+  font-size: 24px ;
+ }
+
+ img {
+  width: 180px;
+  margin-left: 65px;
+}
+
+
 }
 
 .mini_sklad {
-  border: 3px solid $green;
+  border: 5px solid rgb(206, 29, 29);
+  background-color: rgb(225, 255, 177);
+  p {
+    font-size: 24px ;
+   }
+
+   img {
+     width: 150px;
+   }
 }
 .mini_link {
   cursor: pointer;
+  transition: all ease 0.2s;
+
+}
+
+.mini_col {
+
+  .mini_block {
+    width: 320px;
+    height: 320px;
+
+  }
+  
 }
 
 .main_block {
@@ -103,10 +147,10 @@
   overflow: hidden;
   border: 1px solid rgb(180, 180, 180);
   height: auto;
-  width: 440px;
+  width: 855px;
 
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-color: #fff;
   transition: all ease 0.2s;
 
@@ -153,17 +197,26 @@
     top:0px;
     left: 0px;
     height: 100%;
-    width: 2200px;
+    width: 4275px;
     transition: all ease 0.3s;
 
+    .main_img {
+      width: 80%;
+    }
+
+    
     .list_item {
       position: relative;
 
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-      width:440px;
+      width:855px;
 
+      .item_link {
+        display: flex;
+        justify-content: center;
+      }
 
       &>p {
         color:$green;
@@ -182,21 +235,13 @@
     right: 10px;
     z-index: 5;
   }
-
-  
-
-  &:hover {
-
-
-    
-  }
   
 
     }
 
     .cert_block {
-      width: 442px;
-      
+      width: 520px;
+      height: 150px;
       img {
         width: 100%;
       }
@@ -205,7 +250,57 @@
 
   .mini_block { box-sizing: border-box;
     padding: 10px;
+
   }
 
 
+}
+
+.big_block {
+  width: 320px !important;
+  height: 320px !important;
+  img {
+    width: 170px !important;
+    height: 170px !important;
+  }
+   p{
+     font-size: 24px !important;
+    }
+}
+
+.col {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 520px;
+}
+
+
+.row:first-child .animate .mini_block img{
+  // border: 2px solid red;
+  width: 140px;
+}
+
+.row:first-child .animate:nth-child(3) .mini_block img{
+
+  height: 90px;
+  width: 50px;
+  
+}
+
+.row:first-child .animate:nth-child(4) .long_block{
+background-color: #fff;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+padding: 10px 0;
+  img {
+    height: 95px;
+    width: 100px;
+  }
+  font-size: 18px;
+  p {
+    margin: 0  }
 }
