--- a/src/components/FancoilsPage/FancoilModel/FancoilModel.module.scss
+++ b/src/components/FancoilsPage/FancoilModel/FancoilModel.module.scss
@@ -50,6 +50,7 @@
         justify-content: flex-start;
         padding: 0;
         max-width: 500px;
+        margin-top: 20px;
 
         &_item {
           display: flex;
@@ -362,6 +363,9 @@
 }
 
 
-.slider {
 
+
+ul {
+  margin: 0;
+  padding: 0;
 }
