Доработаны фанкойлы, спецификация. Подготовил аксессуары к получению данных.

--- a/src/components/AccessoryItem/AccessoryItem.module.scss
+++ b/src/components/AccessoryItem/AccessoryItem.module.scss
@@ -3,12 +3,14 @@
 .link {
 
   text-decoration: none;
-  color: #000;
+  color: #000;  
+  margin-bottom: 10px;
 }
 
 .card {
   max-width: 240px;
   height: 100%;
+
 
   &__container {
 
