--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -273,7 +273,7 @@
     display: flex;
     flex-wrap: wrap;
 
-    justify-content: flex-start;
+    justify-content: center;
     
     padding-left: 4%;
 
@@ -282,8 +282,8 @@
       position: relative;
       
       height: 100%;
-      max-height: 290px;
-      max-width: 250px;
+      max-height: 240px;
+      max-width: 340px;
       margin-right:3%;
       margin-bottom: 3%;
       cursor: pointer;
