--- a/src/components/AccessoryItem/AccessoryItem.module.scss
+++ b/src/components/AccessoryItem/AccessoryItem.module.scss
@@ -46,13 +46,14 @@
   }
 
   &__img {
-    width: 100%;
+    width: 90%;
+    max-height: 160px;
 
   }
 
   .desc_block {
 
-    max-width: 260px;
+    max-width: 250px;
 
   }
 
