--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -127,6 +127,9 @@
 
       margin-top: 40px;
       margin-bottom: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
 
       .item_title {
 
@@ -152,6 +155,8 @@
         font-size: 18px;
         margin-right: 20px;
         margin-left: 15px;
+        margin-bottom: 10px;
+        margin-top: 10px;
 
         &:hover {
 
