--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,3 +1,5 @@
+@import "../../variables.scss";
+
 .container {
 
 
@@ -15,6 +17,15 @@
     justify-content: space-between;
     padding: 0 30px;
     align-items:center;
+
+    @include desktop() {
+      padding: 0px 60px;
+    }
+
+    @include laptops() {
+      width:90%;
+      padding: 0px;
+    }
   
     .list_left {
   
