--- a/src/components/MainPage/MainPage.module.scss
+++ b/src/components/MainPage/MainPage.module.scss
@@ -14,7 +14,14 @@ a {
   align-items: flex-start;
   flex-wrap: wrap;
 
+  @include desktop() {
 
+    max-width: 1024px;
+  }
+
+  @include laptops() {
+    max-width: 740px;
+  }
 
   .company_block {
     margin-top: 20px;
@@ -56,6 +63,10 @@ a {
     background-image: url('../../assets/img/footer-bg.png') ;
     background-repeat: no-repeat;
     background-position: center bottom;
+
+    @include laptops() {
+      font-size: 26px;
+    }
   }
 
   .subtitle {
@@ -92,6 +103,15 @@ a {
   }
 }
 
+.cards_block {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-bottom: 30px;
+}
+
 .features {
 
   display: flex;
@@ -99,12 +119,14 @@ a {
   justify-content: space-between;
   max-width: 1200px;
   flex-wrap: wrap;
+  
+
 
   .item {
     overflow: hidden;
     position: relative;
     display: flex;
-    width: 260px;
+    width: 20%;
     flex-direction: column;
     align-items: center;
     background-color: #fff;
@@ -114,7 +136,9 @@ a {
     border-radius: 40px;
     margin-bottom: 40px;
     padding: 10px;
-          
+
+  
+    
     .features_img {
       width: 110px;
       margin-bottom: 20px;
@@ -128,6 +152,11 @@ a {
       text-align: center;
       margin-top: 0px;
       margin-bottom: 0px;
+
+      @include laptops() {
+
+        font-size: 16px;
+      }
     }
 
     .hover_block {
