--- a/src/components/AccessoriesPage/AccessoriesModel/AccessoriesModel.module.scss
+++ b/src/components/AccessoriesPage/AccessoriesModel/AccessoriesModel.module.scss
@@ -6,6 +6,17 @@
   justify-content: space-around;
   max-width: 1200px;
 
+  .text_title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #000;
+  }
+
+  .text_desc {
+    font-size: 16px;
+    text-indent: 20px;
+  }
+
   .title {
     width: 100%;
     height: 54px;
@@ -41,7 +52,8 @@
       .block_title {
         font-size: 20px;
         font-weight: 600;
-        // margin-left:-40px;
+  
+        margin-left:30px;
       }
 
       .list {
@@ -50,6 +62,8 @@
         justify-content: flex-start;
         padding: 0;
         max-width: 500px;
+        margin-top: 10px;
+        margin-bottom: 10px;
 
         &_item {
           display: flex;
