--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -103,6 +103,8 @@ display: none;
         }
       }
 
+
+
       .spec {
 
         box-sizing: border-box;
@@ -112,9 +114,20 @@ display: none;
         cursor: pointer;
         display: flex;
         flex-direction: row;
-        // justify-content: flex-end;
+
         align-items: flex-start;
         text-decoration: none;
+        
+
+        .icon {
+          -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+          filter: grayscale(0%);
+        }
+
+        .icon_inactive {
+          -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+          filter: grayscale(100%);
+        }
 
         .count_container {
 
@@ -136,11 +149,13 @@ display: none;
         }
 
         .shadow {
-          cursor: pointer;
-          z-index: 10;
+
+          z-index: 100;
           width: 100%;
-          height: 30px;position: absolute;
+          height: 30px;
+          position: absolute;
         }
+
 
       }
     }
