--- a/src/components/MainPage/AcessoriesSection/AccessoriesSection.module.scss
+++ b/src/components/MainPage/AcessoriesSection/AccessoriesSection.module.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: stretch;
   margin-bottom: 30px;
 }
