--- a/src/components/AccessoriesPage/AccessoriesPage.module.scss
+++ b/src/components/AccessoriesPage/AccessoriesPage.module.scss
@@ -1,12 +1,14 @@
+@import '../../variables';
 
 .content {
 
-  width: 1200px;
+  max-width: 1200px;
+  width: 95%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
-  // height: 89vh;
+  min-height: calc(100vh - 160px);
   
   .title {
 
@@ -18,6 +20,10 @@
     background-image: url('../../assets/img/footer-bg.png') ;
     background-repeat: no-repeat;
     background-position: center bottom;
+
+    @include phones() {
+      font-size: 20px;
+    }
   }
 
   .accessories_block {
@@ -25,7 +31,7 @@
     width: 100%;
     display: flex;
     // flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 30px;
     flex-wrap: wrap;
   }
