--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -9,6 +9,11 @@
   background-image: url('../../assets/img/footer-bg.png') ;
   background-repeat: no-repeat;
   background-position: center bottom;
+
+  @include phones() {
+    font-size: 24px;
+    height: 40px;
+  }
 }
 
 
@@ -37,85 +42,7 @@
 
   }
 
-  .mail_contact {
 
-    display: flex;
-    flex-direction: row;
-    flex-wrap:wrap;
-    max-width: 1200px;
-    margin-bottom: 40px;
-
-    .item {
-
-      position: relative;
-      width: 20%;
-      border:2px solid $green;
-      
-      -webkit-box-shadow: 10px 10px 33px -17px rgba(0,0,0,0.75);
-      -moz-box-shadow: 10px 10px 33px -17px rgba(0,0,0,0.75);
-      box-shadow: 10px 10px 33px -17px rgba(0,0,0,0.75);
-
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      padding: 10px;
-      margin: 10px;
-      padding-bottom: 50px;
-      background-color: #fff;
-
-      transition: all ease 0.4s;
-
-      &:hover {
-        -webkit-box-shadow: 2px 8px 48px -10px rgb(130, 130, 130);
-        -moz-box-shadow: 2px 8px 48px -10px rgb(130, 130, 130);
-        box-shadow: 2px 8px 48px -10px rgb(129, 129, 129);
-      
-      }
-
-
-      
-      .contact__title {
-
-        font-size: 20px;
-        margin-top: 12px;
-        text-align: center;
-        font-weight: 500;
-      }
-
-      .contact__adress {
-
-        cursor: pointer;
-        position: absolute;
-        font-size: 16px;
-
-        font-weight: 500;
-        text-decoration: none;
-        color: $green;
-        padding: 4px 5px;
-        border-radius: 5px;
-        transition: all ease 0.2s;
-        bottom: 10px;
-
-        &:hover {
-
-
-          text-decoration: underline;
-
-          
-        }
-
-      }
-
-      .contact__adress_second {
-        bottom: 35px;
-      }
-
- 
-
-    }
-  }
 
   .adress_block {
     padding-left: 20px;
@@ -131,10 +58,17 @@
       flex-direction: column;
       align-items: flex-start;
 
+      @include tablets() {
+        align-items:center;
+      }
+
       .item_title {
 
         font-size: 24px;
         
+        @include tablets() {
+          font-size: 20px;
+        }
         
       }
 
@@ -144,6 +78,13 @@
         margin-left: 15px;
         margin-top: 10px;
         margin-bottom: 10px;
+
+        @include tablets() {
+          font-size: 16px;
+          width: 82%;
+          line-height: 30px;
+          text-align: center;
+        }
       }
 
       .link {
@@ -157,6 +98,10 @@
         margin-left: 15px;
         margin-bottom: 10px;
         margin-top: 10px;
+
+        @include tablets() {
+          font-size: 16px;
+        }
 
         &:hover {
 
