--- a/src/components/FancoilsPage/FancoilModel/FancoilModel.module.scss
+++ b/src/components/FancoilsPage/FancoilModel/FancoilModel.module.scss
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   max-width: 1200px;
-
+  width: 100%;
   .title {
     width: 100%;
     height: 54px;
@@ -15,10 +15,15 @@
     background-image: url("../../../assets/img/footer-bg.png");
     background-repeat: no-repeat;
     background-position: center bottom;
+
+    @include phones() {
+      height: 40px;
+      font-size: 22px;
+    }
   }
 
   .model_container {
-    width: 100%;
+    width: 95%;
     max-width: 1200px;
     justify-content: space-around;
     display: flex;
@@ -32,6 +37,10 @@
     .left_side {
       width: 45%;
       // margin-left: 30px;
+      
+      @include tablets() {
+        width: 90%;
+      }
 
       .card_img {
         object-fit: cover;
@@ -44,6 +53,12 @@
         // margin-left:-40px;
       }
 
+      .technologies_block {
+        @include tablets() {
+          display: none;
+        }
+      }
+
       .list {
         list-style: none;
         display: flex;
@@ -51,6 +66,8 @@
         padding: 0;
         max-width: 500px;
         margin-top: 20px;
+
+
 
         &_item {
           display: flex;
@@ -97,11 +114,21 @@
           font-weight: 600;
           font-size: 20px;
           color: #000;
+
+
         }
 
 
         &_item {
           margin-left: 20px;
+
+          @include tablets() {
+            font-size:18px;
+          }
+
+          @include phones() {
+            font-size: 14px;
+          }
         }
 
         .item_left {
@@ -117,7 +144,11 @@
     }
 
     .right_side {
-      width: 45%;
+      width: 50%;
+
+      @include tablets() {
+        width: 90%;
+      }
 
       .advantages_list {
         position: relative;
@@ -145,6 +176,12 @@
           position: absolute;
           right: 0;
           top: 0;
+
+          @include laptops(){
+            padding: 10px 5px;
+            width: 145px;
+            font-size: 14px;
+          } 
         }
 
         .advantages_item {
@@ -153,6 +190,10 @@
           flex-direction: column;
           align-items: center;
           justify-content: space-around;
+
+          @include tablets() {
+            width: 70px;
+          }
 
           .item_img {
             border: 2px solid $green;
@@ -185,8 +226,17 @@
           margin-bottom: 5px;
           border-bottom: 1px dashed #e9e9e9;
 
+          @include phones() {
+            font-size: 14px;
+          }
+
           .item__left_side {
             font-weight: 600;
+          }
+
+          .item__right_side{
+            min-width: 75px;
+            text-align: end;
           }
         }
       }
@@ -200,11 +250,21 @@
     justify-content: space-between;
     align-items: start;
 
+    @include tablets() {
+      flex-wrap: wrap;
+      align-items:center;
+      justify-content: center;
+    }
+
     .right_side {
       width: 49%;
       background-color: #fff;
       border: 1px solid $greyhover;
       border-radius: 10px;
+
+      @include tablets() {
+        width:95%;
+      }
 
       .text_title {
         padding-left: 20px;
@@ -215,6 +275,9 @@
 
     .left_side {
       width: 50%;
+      @include tablets() {
+        width:95%;
+      }
     }
   }
 
@@ -275,6 +338,8 @@
 
   .accessories {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
