--- a/src/components/FancoilsPage/FancoilsPage.module.scss
+++ b/src/components/FancoilsPage/FancoilsPage.module.scss
@@ -1,11 +1,11 @@
 .content {
   // margin-top: 50px;
-  width: 1200px;
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
-  height: 89vh;
+  min-height: calc(100vh - 160px);
 
 
   .title {
