--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -18,8 +18,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
-  height: 100%;
+  min-height: 100vh;
   background-color: $grey;
   background-image: url('./assets/img/bg.PNG');
   background-size: 300px;
