--- a/src/components/AccessoriesPage/AccessoriesPage.module.css
+++ b/src/components/AccessoriesPage/AccessoriesPage.module.css
@@ -1,5 +1,6 @@
 .content {
-  width: 1200px;
+  max-width: 1200px;
+  width: 95%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,6 +13,7 @@
           align-items: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  min-height: calc(100vh - 160px);
 }
 
 .content .title {
@@ -24,14 +26,19 @@
   background-position: center bottom;
 }
 
+@media screen and (max-width: 480px) {
+  .content .title {
+    font-size: 20px;
+  }
+}
+
 .content .accessories_block {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin-bottom: 30px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
