--- a/src/components/FancoilsPage/FancoilsPage.module.css
+++ b/src/components/FancoilsPage/FancoilsPage.module.css
@@ -1,5 +1,5 @@
 .content {
-  width: 1200px;
+  max-width: 1200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,7 +12,7 @@
           align-items: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 89vh;
+  min-height: calc(100vh - 160px);
 }
 
 .content .title {
