--- a/src/components/MainPage/AcessoriesSection/AccessoriesSection.module.css
+++ b/src/components/MainPage/AcessoriesSection/AccessoriesSection.module.css
@@ -9,9 +9,9 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
